# sqlx-sqlite-database-connection

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 20240430231622_create-users-table.down.sql  20240430231622_create-users-table.up.sql
src/: database.rs  main.rs
