[package]
name = "sqlx-sqlite-database-connection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
sqlx = { version = "0.7", features = [
  "chrono",
  "json",
  "macros",
  "migrate",
  "sqlite",
  "runtime-tokio-rustls",
  "uuid",
] }
tokio = { version = "1.37.0", features = ["full"] }
